trunk/Archive2/e2/141492723f302e/output
main.cpp: In function 'int main()':
main.cpp:16:46: error: no matching function for call to 'std::basic_fstream<char>::open(std::string&, const openmode&, int)'
        fs.open(filename, std::ios::out, 00400); //Create file.
                                              ^
main.cpp:16:46: note: candidates are:
In file included from main.cpp:2:0:
/usr/local/include/c++/4.9.2/fstream:889:7: note: void std::basic_fstream<_CharT, _Traits>::open(const char*, std::ios_base::openmode) [with _CharT = char; _Traits = std::char_traits<char>; std::ios_base::openmode = std::_Ios_Openmode]
       open(const char* __s,
       ^
/usr/local/include/c++/4.9.2/fstream:889:7: note:   candidate expects 2 arguments, 3 provided
/usr/local/include/c++/4.9.2/fstream:910:7: note: void std::basic_fstream<_CharT, _Traits>::open(const string&, std::ios_base::openmode) [with _CharT = char; _Traits = std::char_traits<char>; std::string = std::basic_string<char>; std::ios_base::openmode = std::_Ios_Openmode]
       open(const std::string& __s,
       ^
/usr/local/include/c++/4.9.2/fstream:910:7: note:   candidate expects 2 arguments, 3 provided
